clusters/server/dev/server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: server
spec:
  template:
    spec:
      containers:
        - name: server
          image: ricoberger/gitops-using-argo-cd-and-tekton:dev-aa686cd98a501b4b1a19c47f6d8e632ca2c64f74
